2010-02-26 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSServicesManager.m: NSUpdateDynamicServices() ask workspace
	to rebuild cache of application information so the update from cache is
	actually loading the latest data.
	* Source/NSLayoutManager.m: Fix for insertion point of empty document.
	Not sure this is ever needed in normal use.

2010-02-25 22:37-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSClipView.m: Correction for crash.

2010-02-25 Riccardo Mottola <rmottola@users.sf.net>

	* Source/NSDrawer.m: removed c99-isms
	* Source/GSTitleView.m: removed c99-isms

2010-02-24 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPasteboard.m: remove obsolete code for setting up invocation.

2010-02-24 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPopUpButtonCell.m (-setObjectValue:): Synchronise the title.

2010-02-24 Riccardo Mottola <rmottola@users.sf.net>

	* Source/NSBrowser.m,
	* Source/NSMatrix.m: use controlColor for the background to match
	Cocoa behaviour.

2010-02-22  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSButtonCell.m (-setImagePosition): Never call NSCell's
	-setType: to change the cell's type, as this could eventually
	reset the button's image or title. Neither of this is desirable
	as it prevents temporarily hiding the image or title by changing
	the image position.

2010-02-22  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Tools/GSspell.m (-spellServer:findMisspelledWord...): Check
	misspelled words reported by aspell against the user dictionaries
	so that the current document's ignored words are not returned back
	to the spell checker.

2010-02-21 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSDisplayServer.h:
	Check for "#if !NO_GNUSTEP" instead of "#ifndef NO_GNUSTEP" as
	base has changed this to always being defined.

2010-02-20 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSFont.h,
	* Headers/Additions/GNUstepGUI/GSFontInfo.h,
	* Source/GSFontInfo.m,
	* Source/NSAffineTransform.m,